--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,28 @@
     <link rel="stylesheet" href="./css/output.css">
 </head>
 <body>
-    <h1>Hola</h1>
+    <header class="bg-blue-500 min-h-[600px]">
+        <nav class=" wrapper py-4 text-white grid gap-6 place-items-center ">
+            <a href="">
+                <h2 class="font-extrabold text-3xl ">Landing.</h2>
+            </a>
+            <div class="space-x-4 ">
+                <a href="">Inicio</a>
+                <a href="">habilidades</a>
+                <a href="">Proyectos</a>
+            </div>
+            
+        </nav>
+
+        <section class="wrapper py-14 flex flex-col items-center gap-12">
+            <img src="./assets/ilustration.svg" alt="Ilustracion" class="max-w-lg w-full">
+            <div class="text-white space-y-6 text-center">
+                <h1 class="text-3xl font-bold">Hola mi nombre es Jesus. Sera un placer ayudarte</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis officia veritatis in quasi inventore, numquam et dolor officiis reprehenderit.  enim eligendi doloribus!</p>
+                <a href="" class="inline-block bg-slate-700 py-4 px-8 font-bold rounded-xl">Contactame ahora!</a>
+            </div>
+        </section>
+    </header> 
     
 </body>
 </html>
