--- a/src/index.html
+++ b/src/index.html
@@ -57,6 +57,33 @@
                 </article>
             </div>
         </section>
+
+        <section class="bg-slate-50 py-10">
+            <div class="wrapper text-center">
+                <h2 class="font-bold text-3xl">Nuestro trabajo!</h2>
+                <p class="mt-10 font-light text-lg text-slate-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae debitis in non, voluptatibus dolorum et nesciunt ad quaera.</p>
+
+                <div class="mt-12 grid gap-12">
+                    <article class="w-4/5 mx-auto space-y-5">
+                        <img class="rounded-2xl aspect-square object-cover" src="./assets/welder.png" alt="">
+                        <h3 class="font-medium text-2xl">Welding</h3>
+                        <p class="font-light text-md text-slate-500">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </article>
+                    <article class="w-4/5 mx-auto space-y-5">
+                        <img class="rounded-2xl aspect-square object-cover" src="./assets/tadequipo.jpg" alt="">
+                        <h3 class="font-medium text-2xl">Bowl Feeder</h3>
+                        <p class="font-light text-md text-slate-500">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </article>
+                    <article class="w-4/5 mx-auto space-y-5">
+                        <img class="rounded-2xl aspect-square object-cover" src="./assets/bowltad.jpg" alt="">
+                        <h3 class="font-medium text-2xl">Bowl feeder</h3>
+                        <p class="font-light text-md text-slate-500">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </article>
+                </div>
+                
+            </div>
+
+        </section>
     </main> 
     
 </body>
