--- a/src/index.html
+++ b/src/index.html
@@ -84,6 +84,17 @@
             </div>
 
         </section>
+
+        <section class="wrapper py-20 grid gap-12">
+            <div>
+                <h2 class="font-bold text-2xl">Dame tu correo y te contactare a la brevedad.</h2>
+                <p class="font-light text-slate-600 text-md mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus commodi fuga, quam ipsa ullam quisquam error cum, accusamus laborum aliquam esse quaerat.</p>
+            </div>
+            <form action="" class="grid gap-6">
+                <input class="border border-slate-900 p-3 rounded-lg" type="email" name="" id="" placeholder="hola@ejemplo.com">
+                <input class="bg-orange-500 text-white py-3 px-10 rounded-lg" type="submit" value="Contactame!">
+            </form>
+        </section>
     </main> 
     
 </body>
